--- a/package.json
+++ b/package.json
@@ -7,16 +7,26 @@
     "gatsby": "^2.17.6",
     "gatsby-image": "^2.2.30",
     "gatsby-plugin-manifest": "^2.2.25",
+    "gatsby-plugin-nprogress": "^2.1.12",
     "gatsby-plugin-offline": "^3.0.17",
+    "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
     "gatsby-plugin-react-helmet": "^3.1.13",
+    "gatsby-plugin-robots-txt": "^1.5.0",
     "gatsby-plugin-sharp": "^2.2.34",
+    "gatsby-plugin-sitemap": "^2.2.19",
+    "gatsby-plugin-styled-components": "^3.1.11",
     "gatsby-source-filesystem": "^2.1.35",
+    "gatsby-transformer-remark": "^2.6.32",
     "gatsby-transformer-sharp": "^2.3.1",
+    "pigeon-maps": "^0.14.0",
+    "pigeon-marker": "^0.3.4",
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-helmet": "^5.2.1",
-    "styled-components": "^4.4.0"
+    "react-scroll": "^1.7.14",
+    "styled-components": "^4.4.0",
+    "validator": "^12.0.0"
   },
   "devDependencies": {
     "eslint-config-react-app": "^5.0.2",
